Update to Android 12+

--- a/ObjectDetection/app/build.gradle
+++ b/ObjectDetection/app/build.gradle
@@ -1,16 +1,21 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "org.pytorch.demo.objectdetection"
         minSdkVersion 28
-        targetSdkVersion 30
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders = [
+                androidTestInstrumentationRunnerArguments: [
+                        exported: "true"
+                ]
+        ]
     }
 
     buildTypes {
