--- a/PyTorchDemoApp/app/src/main/AndroidManifest.xml
+++ b/PyTorchDemoApp/app/src/main/AndroidManifest.xml
@@ -10,19 +10,22 @@
         android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".WelcomeActivity"
-            android:label="@string/app_name">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"></activity>
         <activity android:name=".vision.VisionListActivity" />
         <activity android:name=".nlp.NLPListActivity" />
         <activity
             android:name=".vision.ImageClassificationActivity"
-            android:label="@string/image_classification_title"></activity>
+            android:label="@string/image_classification_title"
+            android:exported="false"></activity>
         <activity android:name=".nlp.TextClassificationActivity" />
 
     </application>
