--- a/NativeApp/app/build.gradle
+++ b/NativeApp/app/build.gradle
@@ -11,12 +11,11 @@ android {
     configurations {
         extractForNativeBuild
     }
-    compileSdkVersion 28
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 33
     defaultConfig {
         applicationId "org.pytorch.nativeapp"
-        minSdkVersion 21
-        targetSdkVersion 28
+        minSdkVersion 28
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
        externalNativeBuild {
@@ -39,14 +38,15 @@ android {
         main {
             jniLibs.srcDirs = ['src/main/jniLibs']
         }
-    }        
+    }
+    namespace 'org.pytorch.nativeapp'
 }
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
-    implementation 'org.pytorch:pytorch_android:1.6.0-SNAPSHOT'
-    extractForNativeBuild 'org.pytorch:pytorch_android:1.6.0-SNAPSHOT'
+    implementation 'org.pytorch:pytorch_android:1.13.1'
+    extractForNativeBuild 'org.pytorch:pytorch_android:1.13.1'
 }
 
 task extractAARForNativeBuild {
