--- a/PyTorchDemoApp/app/build.gradle
+++ b/PyTorchDemoApp/app/build.gradle
@@ -33,11 +33,18 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
-    def camerax_version = "1.0.0-alpha05"
-    implementation "androidx.camera:camera-core:$camerax_version"
-    implementation "androidx.camera:camera-camera2:$camerax_version"
     implementation 'com.google.android.material:material:1.9.0'
+
+    //def camerax_version = "1.0.0-alpha05"
+    def camerax_version = "1.2.2"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-video:${camerax_version}"
+
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
+    //implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
 
     implementation 'org.pytorch:pytorch_android:1.13.1'
     implementation 'org.pytorch:pytorch_android_torchvision:1.13.1'
