--- a/PyTorchDemoApp/app/src/main/AndroidManifest.xml
+++ b/PyTorchDemoApp/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-feature android:name="android.hardware.camera.any" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,7 +34,5 @@
         <activity android:name=".nlp.TextClassificationActivity" />
 
     </application>
-
-    <uses-permission android:name="android.permission.CAMERA" />
 
 </manifest>
