--- a/ASLRecognition/gradle/wrapper/gradle-wrapper.properties
+++ b/ASLRecognition/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,4 @@
+#Tue Jul 09 10:45:10 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-bin.zip
