Update class views

--- a/ObjectDetection/app/src/main/AndroidManifest.xml
+++ b/ObjectDetection/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-feature android:name="android.hardware.camera.any" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- Declare that the app uses the camera but it is not required -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
@@ -18,7 +20,6 @@
         android:exported="true">
         <activity android:name=".MainActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,7 +29,6 @@
         <activity
             android:name=".ObjectDetectionActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait"
             android:exported="false">
         </activity>
     </application>
