Update gradle and camera code

--- a/PyTorchDemoApp/gradle.properties
+++ b/PyTorchDemoApp/gradle.properties
@@ -4,3 +4,4 @@ android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 
+org.gradle.jvmargs=-Xmx8g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=4g
