--- a/PyTorchDemoApp/app/build.gradle
+++ b/PyTorchDemoApp/app/build.gradle
@@ -1,17 +1,15 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 repositories {
-    jcenter()
+    mavenCentral()
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots"
     }
 }
 
 android {
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
     compileSdkVersion 34
     defaultConfig {
         applicationId "org.pytorch.demo"
@@ -27,6 +25,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
     namespace 'org.pytorch.demo'
 }
 
@@ -35,7 +40,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.12.0'
 
-    //def camerax_version = "1.0.0-alpha05"
     def camerax_version = "1.3.4"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
@@ -46,6 +50,6 @@ dependencies {
     implementation "androidx.camera:camera-extensions:${camerax_version}"
     //implementation "androidx.camera:camera-mlkit-vision:${camerax_version}"
 
-    implementation 'org.pytorch:pytorch_android:1.13.1'
-    implementation 'org.pytorch:pytorch_android_torchvision:1.13.1'
+    implementation 'org.pytorch:pytorch_android:2.1.0'
+    implementation 'org.pytorch:pytorch_android_torchvision:2.1.0'
 }
