--- a/NativeApp/app/build.gradle
+++ b/NativeApp/app/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 repositories {
-    jcenter()
+    mavenCentral()
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots"
     }
@@ -11,11 +13,11 @@ android {
     configurations {
         extractForNativeBuild
     }
-    compileSdkVersion 33
+    compileSdkVersion 34
     defaultConfig {
         applicationId "org.pytorch.nativeapp"
         minSdkVersion 28
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
        externalNativeBuild {
@@ -39,14 +41,21 @@ android {
             jniLibs.srcDirs = ['src/main/jniLibs']
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
     namespace 'org.pytorch.nativeapp'
 }
 
 dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
-    implementation 'org.pytorch:pytorch_android:1.13.1'
-    extractForNativeBuild 'org.pytorch:pytorch_android:1.13.1'
+    implementation 'org.pytorch:pytorch_android:2.1.0'
+    extractForNativeBuild 'org.pytorch:pytorch_android:2.1.0'
 }
 
 task extractAARForNativeBuild {
